--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc899996910&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f00d0f53fd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc899659fd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc89965f210&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f00d0c3e150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f00d0c3e350&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc899c0d910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc899c0db10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f00d11ef9d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f00d11efbd0&gt;]</pre>
 </div>
 
 </div>
