--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f00d0f53fd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbe25517f10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f00d0c3e150&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f00d0c3e350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbe251ed190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbe251ed390&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f00d11ef9d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f00d11efbd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbe2579ab10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbe2579ad10&gt;]</pre>
 </div>
 
 </div>
