--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7463aa2e90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff273574250&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7463ad3850&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f746376e1d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff273246090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff273246290&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7463d78e10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7463d11ad0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff2737f4a10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff2737f4c10&gt;]</pre>
 </div>
 
 </div>
