--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f422c6cc2d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6496d7c410&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f422c38d190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f422c38d390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6496a3ff10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6496a5f190&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f422c93aad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f422c93acd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f649700d850&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f649700da90&gt;]</pre>
 </div>
 
 </div>
