--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f10b2fcf8d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f68993e6950&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f10b2c93e50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f10b2ca0110&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f68990820d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6899088210&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f10b3247590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f10b3250a10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f689962f9d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6899637b10&gt;]</pre>
 </div>
 
 </div>
