--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa84a47bcd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9e73f38b10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa84a15f210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa84a1540d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9e73ba4f50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9e73bd6190&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa84a701810&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa84a701a10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9e7416f850&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9e7416fa50&gt;]</pre>
 </div>
 
 </div>
