--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9e73f38b10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa897ddee90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9e73ba4f50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9e73bd6190&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa897785ed0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa897773110&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9e7416f850&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9e7416fa50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa897d17790&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa897d17990&gt;]</pre>
 </div>
 
 </div>
