--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa897ddee90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd05a6161d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa897785ed0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa897773110&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd05a0147d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd05a2d6190&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa897d17790&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa897d17990&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd05a8bcfd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd05a884a90&gt;]</pre>
 </div>
 
 </div>
