--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fed9de1d990&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f756bba11d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fed9daf4110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fed9daf4310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f756b85de10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f756b85dfd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fed9e0a2a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fed9e0a2c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f756bdf2750&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f756bdf2950&gt;]</pre>
 </div>
 
 </div>
