--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f756bba11d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe700040cd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f756b85de10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f756b85dfd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe6ffceff50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe6ffd03150&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f756bdf2750&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f756bdf2950&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe7002a9990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe7002b1a90&gt;]</pre>
 </div>
 
 </div>
