--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4d617d7750&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f89d49e4850&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4d6145fd10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4d6145fe90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f89d4697e90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f89d46b30d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4d61a76750&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4d61a297d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f89d4c64790&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f89d4c64990&gt;]</pre>
 </div>
 
 </div>
