--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f89d49e4850&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f98a0193b90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f89d4697e90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f89d46b30d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f989fe82f90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f989fe641d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f89d4c64790&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f89d4c64990&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f98a044c750&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f98a0414b10&gt;]</pre>
 </div>
 
 </div>
