--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd8d7dd9f90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fee3eba46d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd8d7a6d150&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd8d7a6d390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fee3e52b0d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fee3e52b2d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd8d801aa50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd8d801ac90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fee3ead99d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fee3ead9bd0&gt;]</pre>
 </div>
 
 </div>
