--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4401110fd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0e77b2acd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4400dc5e50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4400dde050&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0e777eced0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0e777db110&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f44013907d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f44013909d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0e77d81810&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0e77d81a10&gt;]</pre>
 </div>
 
 </div>
