--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0e77b2acd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f98e9823e10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0e777eced0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0e777db110&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f98e94dcf50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f98e94e51d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0e77d81810&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0e77d81a10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f98e9a90890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f98e9a90ad0&gt;]</pre>
 </div>
 
 </div>
