--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f98e9823e10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f140e001b90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f98e94dcf50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f98e94e51d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f140dcd0e90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f140dcd90d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f98e9a90890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f98e9a90ad0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f140e2867d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f140e2869d0&gt;]</pre>
 </div>
 
 </div>
