--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fee0873ffd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f24921e0650&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fee0840ff50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fee084411d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2491eb1f10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2491ed1150&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fee089d88d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fee089d8b10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f249247f850&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f249247fa50&gt;]</pre>
 </div>
 
 </div>
