--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f15e57f27d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f959f2a8390&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f15e54e5090&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f15e54e5290&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f959efb3e90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f959efa10d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f15e5a929d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f15e5a92bd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f959f546850&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f959f546a50&gt;]</pre>
 </div>
 
 </div>
