--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb987040850&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f43949de790&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb986d2d1d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb986d2d3d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f438ea1de90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f438ea250d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb9872cda10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb9872cdc10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f438efd2750&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f438efd2950&gt;]</pre>
 </div>
 
 </div>
