--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f43949de790&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f07305fb390&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f438ea1de90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f438ea250d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0730328890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f07302d4110&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f438efd2750&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f438efd2950&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f07308d8590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0730880a50&gt;]</pre>
 </div>
 
 </div>
