--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f62803e4c10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6dbbf3db50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f62800b7ed0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f62800d5110&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6dbbc02f50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6dbbc20190&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f62806818d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6280681ad0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6dbc1cc8d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6dbc1ccad0&gt;]</pre>
 </div>
 
 </div>
