--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6dbbf3db50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f93f4cc0990&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6dbbc02f50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6dbbc20190&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f93f49a93d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f93f49a96d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6dbc1cc8d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6dbc1ccad0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f93f4f51750&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f93f4f51950&gt;]</pre>
 </div>
 
 </div>
