--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f14bda47f10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbfc4280590&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f14bdfe8d50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f14bdfe8f50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbfc3f19f10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbfc3f29150&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f14be5b5650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f14be5b5850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbfc44d9810&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbfc44d9a10&gt;]</pre>
 </div>
 
 </div>
