--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbfc4280590&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0345c04c50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbfc3f19f10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbfc3f29150&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f03458c6e50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f03458e6090&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbfc44d9810&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbfc44d9a10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0345e92790&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0345e92990&gt;]</pre>
 </div>
 
 </div>
