--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f85144ea4d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc7eb027d90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f85141f9e50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f85141d9310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc7eace9ed0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc7ead06090&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f85147806d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8514789c10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc7eb2f8510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc7eb2b6950&gt;]</pre>
 </div>
 
 </div>
